input-sys/include/libinput.1.7.0.h


struct libinput;
struct libinput_device;
struct libinput_event;
enum libinput_event_type {
	LIBINPUT_EVENT_NONE = 0,
	LIBINPUT_EVENT_DEVICE_ADDED,
	LIBINPUT_EVENT_DEVICE_REMOVED,
	LIBINPUT_EVENT_KEYBOARD_KEY = 300,
	LIBINPUT_EVENT_POINTER_MOTION = 400,
	LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE,
	LIBINPUT_EVENT_POINTER_BUTTON,
	LIBINPUT_EVENT_POINTER_AXIS,
	LIBINPUT_EVENT_TOUCH_DOWN = 500,
	LIBINPUT_EVENT_TOUCH_UP,
	LIBINPUT_EVENT_TOUCH_MOTION,
	LIBINPUT_EVENT_TOUCH_CANCEL,
	LIBINPUT_EVENT_TOUCH_FRAME,
	LIBINPUT_EVENT_TABLET_TOOL_AXIS = 600,
	LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY,
	LIBINPUT_EVENT_TABLET_TOOL_TIP,
	LIBINPUT_EVENT_TABLET_TOOL_BUTTON,
	LIBINPUT_EVENT_TABLET_PAD_BUTTON = 700,
	LIBINPUT_EVENT_TABLET_PAD_RING,
	LIBINPUT_EVENT_TABLET_PAD_STRIP,
	LIBINPUT_EVENT_GESTURE_SWIPE_BEGIN = 800,
	LIBINPUT_EVENT_GESTURE_SWIPE_UPDATE,
	LIBINPUT_EVENT_GESTURE_SWIPE_END,
	LIBINPUT_EVENT_GESTURE_PINCH_BEGIN,
	LIBINPUT_EVENT_GESTURE_PINCH_UPDATE,
	LIBINPUT_EVENT_GESTURE_PINCH_END,
	LIBINPUT_EVENT_SWITCH_TOGGLE = 900,
};
void
libinput_event_destroy(struct libinput_event *event);
struct libinput_interface {
	int (*open_restricted)(const char *path, int flags, void *user_data);
	void (*close_restricted)(int fd, void *user_data);
};
struct libinput *
libinput_udev_create_context(const struct libinput_interface *interface,
			     void *user_data,
			     struct udev *udev);
int
libinput_udev_assign_seat(struct libinput *libinput,
			  const char *seat_id);
struct libinput *
libinput_path_create_context(const struct libinput_interface *interface,
			     void *user_data);
struct libinput_device *
libinput_path_add_device(struct libinput *libinput,
			 const char *path);
void
libinput_path_remove_device(struct libinput_device *device);
int
libinput_get_fd(struct libinput *libinput);
int
libinput_dispatch(struct libinput *libinput);
struct libinput_event *
libinput_get_event(struct libinput *libinput);
enum libinput_event_type
libinput_next_event_type(struct libinput *libinput);
void
libinput_set_user_data(struct libinput *libinput,
		       void *user_data);
void *
libinput_get_user_data(struct libinput *libinput);
int
libinput_resume(struct libinput *libinput);
void
libinput_suspend(struct libinput *libinput);
struct libinput *
libinput_ref(struct libinput *libinput);
struct libinput *
libinput_unref(struct libinput *libinput);
struct libinput_device *
libinput_device_ref(struct libinput_device *device);