input-sys/src/gen.rs

/**
 * @ingroup base
 * @struct libinput_interface
 *
 * libinput does not open file descriptors to devices directly, instead
 * open_restricted() and close_restricted() are called for each path that
 * must be opened.
 *
 * @see libinput_udev_create_context
 * @see libinput_path_create_context
 */
#[repr(C)]
#[derive(Debug, Copy)]
pub struct libinput_interface {
    /**
	 * Open the device at the given path with the flags provided and
	 * return the fd.
	 *
	 * @param path The device path to open
	 * @param flags Flags as defined by open(2)
	 * @param user_data The user_data provided in
	 * libinput_udev_create_context()
	 *
	 * @return The file descriptor, or a negative errno on failure.
	 */
    pub open_restricted: ::std::option::Option<unsafe extern "C" fn(path:
                                                                        *const libc::c_char,
                                                                    flags:
                                                                        libc::c_int,
                                                                    user_data:
                                                                        *mut libc::c_void)
                                                   -> libc::c_int>,
    /**
	 * Close the file descriptor.
	 *
	 * @param fd The file descriptor to close
	 * @param user_data The user_data provided in
	 * libinput_udev_create_context()
	 */
    pub close_restricted: ::std::option::Option<unsafe extern "C" fn(fd:
                                                                         libc::c_int,
                                                                     user_data:
                                                                         *mut libc::c_void)>,
}
#[test]
fn bindgen_test_layout_libinput_interface() {
    assert_eq!(::std::mem::size_of::<libinput_interface>() , 16usize , concat
               ! ( "Size of: " , stringify ! ( libinput_interface ) ));
    assert_eq! (::std::mem::align_of::<libinput_interface>() , 8usize , concat
                ! ( "Alignment of " , stringify ! ( libinput_interface ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const libinput_interface ) ) . open_restricted
                as * const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( libinput_interface ) ,
                "::" , stringify ! ( open_restricted ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const libinput_interface ) ) . close_restricted
                as * const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( libinput_interface ) ,
                "::" , stringify ! ( close_restricted ) ));
}
impl Clone for libinput_interface {
    fn clone(&self) -> Self { *self }
}
extern "C" {
    /**
 * @ingroup base
 *
 * Create a new libinput context from udev. This context is inactive until
 * assigned a seat ID with libinput_udev_assign_seat().
 *
 * @param interface The callback interface
 * @param user_data Caller-specific data passed to the various callback
 * interfaces.
 * @param udev An already initialized udev context
 *
 * @return An initialized, but inactive libinput context or NULL on error
 */
    pub fn libinput_udev_create_context(interface: *const libinput_interface,
                                        user_data: *mut libc::c_void,
                                        udev: *mut udev) -> *mut libinput;
}
extern "C" {
    /**
 * @ingroup base
 *
 * Assign a seat to this libinput context. New devices or the removal of
 * existing devices will appear as events during libinput_dispatch().
 *
 * libinput_udev_assign_seat() succeeds even if no input devices are currently
 * available on this seat, or if devices are available but fail to open in
 * @ref libinput_interface::open_restricted. Devices that do not have the
 * minimum capabilities to be recognized as pointer, keyboard or touch
 * device are ignored. Such devices and those that failed to open
 * ignored until the next call to libinput_resume().
 *
 * This function may only be called once per context.
 *
 * @param libinput A libinput context initialized with
 * libinput_udev_create_context()
 * @param seat_id A seat identifier. This string must not be NULL.
 *
 * @return 0 on success or -1 on failure.
 */
    pub fn libinput_udev_assign_seat(libinput: *mut libinput,
                                     seat_id: *const libc::c_char)
     -> libc::c_int;
}
extern "C" {
    /**
 * @ingroup base
 *
 * Create a new libinput context that requires the caller to manually add or
 * remove devices with libinput_path_add_device() and
 * libinput_path_remove_device().
 *
 * The context is fully initialized but will not generate events until at
 * least one device has been added.
 *
 * The reference count of the context is initialized to 1. See @ref
 * libinput_unref.
 *
 * @param interface The callback interface
 * @param user_data Caller-specific data passed to the various callback
 * interfaces.
 *
 * @return An initialized, empty libinput context.
 */
    pub fn libinput_path_create_context(interface: *const libinput_interface,
                                        user_data: *mut libc::c_void)
     -> *mut libinput;
}
extern "C" {
    /**
 * @ingroup base
 *
 * Add a device to a libinput context initialized with
 * libinput_path_create_context(). If successful, the device will be
 * added to the internal list and re-opened on libinput_resume(). The device
 * can be removed with libinput_path_remove_device().
 *
 * If the device was successfully initialized, it is returned in the device
 * argument. The lifetime of the returned device pointer is limited until
 * the next libinput_dispatch(), use libinput_device_ref() to keep a permanent
 * reference.
 *
 * @param libinput A previously initialized libinput context
 * @param path Path to an input device
 * @return The newly initiated device on success, or NULL on failure.
 *
 * @note It is an application bug to call this function on a libinput
 * context initialized with libinput_udev_create_context().
 */
    pub fn libinput_path_add_device(libinput: *mut libinput,
                                    path: *const libc::c_char)
     -> *mut libinput_device;
}
extern "C" {
    /**
 * @ingroup base
 *
 * Remove a device from a libinput context initialized with
 * libinput_path_create_context() or added to such a context with
 * libinput_path_add_device().
 *
 * Events already processed from this input device are kept in the queue,
 * the @ref LIBINPUT_EVENT_DEVICE_REMOVED event marks the end of events for
 * this device.
 *
 * If no matching device exists, this function does nothing.
 *
 * @param device A libinput device
 *
 * @note It is an application bug to call this function on a libinput
 * context initialized with libinput_udev_create_context().
 */
    pub fn libinput_path_remove_device(device: *mut libinput_device);
}
extern "C" {
    /**
 * @ingroup base
 *
 * libinput keeps a single file descriptor for all events. Call into
 * libinput_dispatch() if any events become available on this fd.
 *
 * @return The file descriptor used to notify of pending events.
 */
    pub fn libinput_get_fd(libinput: *mut libinput) -> libc::c_int;
}
extern "C" {
    /**
 * @ingroup base
 *
 * Main event dispatchment function. Reads events of the file descriptors
 * and processes them internally. Use libinput_get_event() to retrieve the
 * events.
 *
 * Dispatching does not necessarily queue libinput events. This function
 * should be called immediately once data is available on the file
 * descriptor returned by libinput_get_fd(). libinput has a number of
 * timing-sensitive features (e.g. tap-to-click), any delay in calling
 * libinput_dispatch() may prevent these features from working correctly.
 *
 * @param libinput A previously initialized libinput context
 *
 * @return 0 on success, or a negative errno on failure
 */
    pub fn libinput_dispatch(libinput: *mut libinput) -> libc::c_int;
}
extern "C" {
    /**
 * @ingroup base
 *
 * Retrieve the next event from libinput's internal event queue.
 *
 * After handling the retrieved event, the caller must destroy it using
 * libinput_event_destroy().
 *
 * @param libinput A previously initialized libinput context
 * @return The next available event, or NULL if no event is available.
 */
    pub fn libinput_get_event(libinput: *mut libinput) -> *mut libinput_event;
}
extern "C" {
    /**
 * @ingroup base
 *
 * Return the type of the next event in the internal queue. This function
 * does not pop the event off the queue and the next call to
 * libinput_get_event() returns that event.
 *
 * @param libinput A previously initialized libinput context
 * @return The event type of the next available event or @ref
 * LIBINPUT_EVENT_NONE if no event is available.
 */
    pub fn libinput_next_event_type(libinput: *mut libinput)
     -> libinput_event_type;
}
extern "C" {
    /**
 * @ingroup base
 *
 * Set caller-specific data associated with this context. libinput does
 * not manage, look at, or modify this data. The caller must ensure the
 * data is valid.
 *
 * @param libinput A previously initialized libinput context
 * @param user_data Caller-specific data passed to the various callback
 * interfaces.
 */
    pub fn libinput_set_user_data(libinput: *mut libinput,
                                  user_data: *mut libc::c_void);
}
extern "C" {
    /**
 * @ingroup base
 *
 * Get the caller-specific data associated with this context, if any.
 *
 * @param libinput A previously initialized libinput context
 * @return The caller-specific data previously assigned in
 * libinput_create_udev().
 */
    pub fn libinput_get_user_data(libinput: *mut libinput)
     -> *mut libc::c_void;
}
extern "C" {
    /**
 * @ingroup base
 *
 * Resume a suspended libinput context. This re-enables device
 * monitoring and adds existing devices.
 *
 * @param libinput A previously initialized libinput context
 * @see libinput_suspend
 *
 * @return 0 on success or -1 on failure
 */
    pub fn libinput_resume(libinput: *mut libinput) -> libc::c_int;
}
extern "C" {
    /**
 * @ingroup base
 *
 * Suspend monitoring for new devices and close existing devices.
 * This all but terminates libinput but does keep the context
 * valid to be resumed with libinput_resume().
 *
 * @param libinput A previously initialized libinput context
 */
    pub fn libinput_suspend(libinput: *mut libinput);
}
extern "C" {
    /**
 * @ingroup base
 *
 * Add a reference to the context. A context is destroyed whenever the
 * reference count reaches 0. See @ref libinput_unref.
 *
 * @param libinput A previously initialized valid libinput context
 * @return The passed libinput context
 */
    pub fn libinput_ref(libinput: *mut libinput) -> *mut libinput;
}
